# localmap

./: CMakeLists.txt  README.md  TODO.txt  cell.cpp  cell.h  level.cpp  level.h  localmap.cpp  localmap.h  main.cpp
examples/: CMakeLists.txt  simple-using.cpp
src/: CMakeLists.txt  cell.h  level.h  localmap.cpp  localmap.h  mapsettings.cpp  mapsettings.h
tests/: CMakeLists.txt  celltests.cpp
